# rsip-dns

./: Cargo.toml  README.md
.github/workflows/: rust-ci.yml
src/: context.rs  dns_client.rs  lib.rs  srv_domain.rs  target.rs  trust_dns_client.rs
src/lookup/: mod.rs
src/lookups/: mod.rs
src/records/: addr_record.rs  mod.rs  naptr_record.rs  srv_record.rs
src/resolvables/: mod.rs  resolvable.rs  resolvable_addr_record.rs  resolvable_enum.rs  resolvable_ip_addr.rs  resolvable_naptr_record.rs  resolvable_srv_record.rs  resolvable_vec.rs
src/trust_dns/: async_trust_dns_client.rs  mod.rs  trust_dns_client.rs
tests/: lib.rs
tests/lookups/: domain_with_port.rs  domain_with_transport.rs  ip_addr.rs  just_domain.rs  mod.rs
tests/records/: mod.rs  srv_domain.rs
tests/resolvables/: mod.rs  resolvable_addr_record.rs  resolvable_ip_addr.rs  resolvable_naptr_record.rs  resolvable_srv_record.rs
tests/resolver/: ip_addrs.rs  mod.rs  transport.rs
tests/support/: mocked_dns_client.rs  mod.rs  panic_dns_client.rs  spy_dns_client.rs
