[package]
name = "rsip-dns"
version = "0.1.0"
authors = ["Filippos Vasilakis <vasilakisfil@gmail.com>"]
edition = "2018"
description = "SIP Rust library implementing RFC 3263, implemented on top of rsip"
repository = "https://github.com/vasilakisfil/rsip"
documentation = "https://docs.rs/rsip-dns"
keywords = ["sip", "3261", "3263", "dns", "voip", "srv"]
categories = ["parser-implementations", "parsing", "network-programming"]
license-file = "LICENSE"


[dependencies]
rsip = { path = "../rsip" }
async-trait = { version = "0.1.51" }
futures = { version = "0.3.16" }
trust-dns-resolver = { version = "0.20.3", optional = true }
trust-dns-proto = { version = "0.20.3", optional = true }
rand = { version = "0.8.4", optional = true }
log = { version = "0.4.14" }

[features]
trust-dns = ["trust-dns-resolver", "trust-dns-proto"]
test-utils = ["rand"]

[dev-dependencies]
rsip = { path = "../rsip", features = ["test-utils"] }
quote = "1.0.9"
tokio = { version = "1.0", features = ["full", "test-util"] }
rand = { version = "0.8.4" }
once_cell = { version = "1.8" }
