[package]
name = "rsip-dns"
version = "0.1.2"
authors = ["Filippos Vasilakis <vasilakisfil@gmail.com>"]
edition = "2018"
description = "SIP Rust library implementing RFC 3263, implemented on top of rsip"
repository = "https://github.com/vasilakisfil/rsip"
documentation = "https://docs.rs/rsip-dns"
keywords = ["sip", "3263", "dns", "voip", "srv"]
categories = ["parser-implementations", "parsing", "network-programming"]
license-file = "LICENSE"

[dependencies]
rsip = { version = "0.2.0" }
async-trait = { version = "0.1.51" }
futures = { version = "0.3.16" }
nom = { version = "6.1.2", features = ["alloc", "regexp"] }
trust-dns-resolver = { version = "0.20.3", optional = true }
trust-dns-proto = { version = "0.20.3", optional = true }
testing-utils = { version = "0.1.0", optional = true }

[features]
test-utils = ["testing-utils"]
trust-dns = ["trust-dns-resolver", "trust-dns-proto"]

[dev-dependencies]
rsip = { version = "0.2.0", features = ["test-utils"] }
quote = "1.0.9"
tokio = { version = "1.0", features = ["full", "test-util"] }
rand = { version = "0.8.4" }
once_cell = { version = "1.8" }
log = { version = "0.4.14" }
pretty_env_logger = "0.4.0"

#[package.metadata.docs.rs]
#all-features = true
#rustdoc-args = ["--cfg", "docsrs"]
